style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  color: white;
  font-size: 2em;
  font-family: sans-serif;
}
.flex {
  display: flex;
  justify-content: center;
  align-items: flex-start;
}
.flex--column {
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
}
.header__nav {
  margin-left: 2.5em;
  list-style-type: none;
  gap: 28px;
  font-family: "Lato", sans-serif;
  font-weight: 600;
  align-items: center;
  position: relative;
}
.viewport {
  width: 100%;
  min-height: 100vh;
}
header {
  position: fixed;
  top: 0px;

  gap: 5em;
  padding-top: 1.25em;
  justify-content: flex-start;
  flex-wrap: nowrap;
}
.services__wrapper {
  align-items: flex-start;
}

.l-wrapper {
  margin-inline: auto;
  position: relative;
  right: 300px;
}
.section__inner {
  margin-inline: auto;
}
.page {
  background-image: url(https://microslush.com/wp-content/uploads/2022/09/image2-scaled.webp);
  background-size: cover;
  background-position: center;
}
a {
  font-size: 0.5em;
  text-decoration: none;
  color: white;
}

.hero {
  font-family: "ProximaNovaB", Sans-serif;
  position: relative;
  top: 80px;
  gap: 5px;
  margin-top: 50px;
  max-width: 580px;
  min-width: 500px;
}
.hero__title {
  font-size: 65px;
  font-weight: 700;
  margin-bottom: 25px;
  line-height: 72px;
  margin-bottom: 25px;
  margin-top: 25px;
}
.hero__description {
  margin-bottom: 70px;
  font-size: 20px;
  font-weight: 400;
  line-height: 32px;
}
.header__nav > .header__nav-item:last-child {
  background-color: #007bff;
  border-radius: 4px;
  padding-inline: 18px;
  padding-block: 8px;
}
.hero__contact-btn {
  padding-inline: 25px;
  padding-block: 10px;
  color: white;
  background-color: #1a61ff;
  border-radius: 7px;
  border-color: #4a7df2;
  font-size: 20px;
}
.header__nav-item {
  align-items: center;
}
.nav-item-dropdown {
  display: none;
}

.header__nav-item--has-dropdown:hover .nav-item-dropdown {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  position: absolute;
  top: 100%;
  left: 60px;
  background-color: white;
  list-style-type: none;
  width: fit-content;
  height: fit-content;
  column-gap: 15px;
  max-height: 250px;
  font-size: 0.8em;
  font-weight: 100;
  font-family: "Poppins", sans-serif;
  padding-inline: 20px;
  padding-block: 10px;
}
.nav-item-dropdown a {
  color: #051441;
}

.spacer {
  height: 80px;
}
.stats {
  margin-bottom: 40px;
}
.stats__item {
  align-items: center;
  font-family: Arial sans-serif;
  font-size: 30px;
}
.stats__title {
  margin-right: 5px;

  color: #060a24;
  font-weight: lighter;
  line-height: 60px;
}
.stats__count {
  color: #3e11cf;
  font-weight: 540;
}

.service {
  margin-bottom: 30px;
  color: #6754e2;
  font-size: 20px;
  font-weight: 500;
  font-style: normal;
  line-height: 36px;
}
.service__title {
  color: #2f3534;
}
.service__description {
  color: #636968;
  font-family: Lato;
}

